# Netbox-Plugin-Proxmox

./: LICENSE  README.md  netbox-plugin.yaml  pyproject.toml  setup.py
netbox_plugin_proxmox/: __init__.py  cluster.py  forms.py  models.py  navigation.py  nodes.py  tables.py  urls.py  utils.py  views.py  vms.py
netbox_plugin_proxmox/api/: serializers.py  urls.py  views.py
netbox_plugin_proxmox/migrations/: 0001_initial.py
netbox_plugin_proxmox/templates/netbox_plugin_proxmox/: proxmoxcluster.html  proxmoxnetboxmapping.html  sync_status.html
